# gotham-seed-server

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  README.md  deploy.sh  test_server.sh
config/: seed-server.conf.example
include/: gcty_handler.h  gcty_protocol.h  peer_manager.h  seed_server.h  tor_manager.h
src/: gcty_handler.cpp  gcty_protocol.cpp  main.cpp  peer_manager.cpp  seed_server.cpp  tor_manager.cpp
src/tor-wrapper/: CMakeLists.txt
src/tor-wrapper/include/: gotham_peer_connector.h  gotham_protocol.h  gotham_tor_mesh.h  onion_identity_manager.h  tor_service.h
src/tor-wrapper/src/: gotham_peer_connector.cpp  gotham_protocol.cpp  gotham_tor_mesh.cpp  onion_identity_manager.cpp  tor_service.cpp
systemd/: gotham-seed-server.service.in
